# azw3

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml.example  docker-compose.yml  index.html  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  with_mlflow.py
src/python/: setup.py
src/python/azw3/: __init__.py  cli.py  config.py  ingestion.py  layers.py  pipeline.py  storage.py
src/python/azw3/integrations/: __init__.py  airflow.py  feast.py  mlflow.py
